--- a/HalyomorphaHalys.DensityMap/appsettings.json
+++ b/HalyomorphaHalys.DensityMap/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionString": {
+  "ConnectionStrings": {
     "DefaultConnection": "Data Source=SAHIN-PC\\MSSQLSERVER2017;Initial Catalog=HazelnutBugDb;Integrated Security=True;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
